--- a/ProvBrowser/ProvBrowser.csproj
+++ b/ProvBrowser/ProvBrowser.csproj
@@ -7,6 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <PlatformTarget>AnyCPU</PlatformTarget>
+    <StartupObject>ProvBrowser.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,8 +16,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Include="App.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CefSharp.Wpf.NETCore" Version="131.3.10" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.2" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,7 +37,6 @@
     <Folder Include="ViewModel\Controls\" />
     <Folder Include="ViewModel\Backing\" />
     <Folder Include="View\Controls\" />
-    <Folder Include="WebCore\" />
   </ItemGroup>
 
   <ItemGroup>
