--- a/WpfLibrary/WpfLibrary.csproj
+++ b/WpfLibrary/WpfLibrary.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0-windows</TargetFramework>
@@ -9,7 +9,11 @@
 
   <ItemGroup>
     <Folder Include="Control\" />
-    <Folder Include="Services\" />
+    <Folder Include="Services\Navigation\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
   </ItemGroup>
 
 </Project>
