--- a/ProvBrowser/ProvBrowser.csproj
+++ b/ProvBrowser/ProvBrowser.csproj
@@ -40,16 +40,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ApiConnector\ApiServices.csproj" />
     <ProjectReference Include="..\BrowserCore\BrowserCore.csproj" />
+    <ProjectReference Include="..\FeatureServices\FeatureServices.csproj" />
+    <ProjectReference Include="..\MediaServices\WPFMediaServices.csproj" />
     <ProjectReference Include="..\MVVM.Core\MVVM.Core.csproj" />
-    <ProjectReference Include="..\Services\Services.csproj" />
+    <ProjectReference Include="..\ProvBrowser.ViewModel\ProvBrowser.ViewModel.csproj" />
+    <ProjectReference Include="..\ProvBrowser.View\ProvBrowser.View.csproj" />
+    <ProjectReference Include="..\SupportServices\SupportServices.csproj" />
     <ProjectReference Include="..\WpfLibrary\WpfLibrary.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ViewModel\Controls\" />
-    <Folder Include="ViewModel\Backing\" />
-    <Folder Include="View\Controls\" />
   </ItemGroup>
 
   <ItemGroup>
