--- a/ProvBrowser.ViewModel/ProvBrowser.ViewModel.csproj
+++ b/ProvBrowser.ViewModel/ProvBrowser.ViewModel.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+	  <TargetFramework>net8.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -9,6 +9,14 @@
   <ItemGroup>
     <PackageReference Include="CefSharp.Wpf.NETCore" Version="135.0.170" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BrowserCore\BrowserCore.csproj" />
+    <ProjectReference Include="..\FeatureServices\FeatureServices.csproj" />
+    <ProjectReference Include="..\MediaServices\WPFMediaServices.csproj" />
+    <ProjectReference Include="..\SupportServices\SupportServices.csproj" />
+    <ProjectReference Include="..\WpfLibrary\WpfLibrary.csproj" />
   </ItemGroup>
 
 </Project>
